# win_partlist

./: Cargo.toml  README.md
.github/workflows/: build.yml
example/: Cargo.toml
example/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  types.rs
src/: lib.rs  main.rs
