[package]
name = "win_partlist"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.61.3", features = ["Win32", "Win32_Security", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Storage_IscsiDisc", "Win32_System", "Win32_System_IO", "Win32_System_Ioctl", "Win32_System_WindowsProgramming"] }
